tests/ui/missing_path.stderr
error: unexpected token
 --> tests/ui/missing_path.rs:4:19
  |
4 | type X<T> = Path!(+ T);
  |                   ^

error[E0091]: type parameter `T` is never used
 --> tests/ui/missing_path.rs:4:8
  |
4 | type X<T> = Path!(+ T);
  |        ^ unused type parameter
  |
  = help: consider removing `T` or referring to it in the body of the type alias
  = help: if you intended `T` to be a const parameter, use `const T: /* Type */` instead
